2010-03-26	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/t/hardware-snmp-objects.t: fixed some broken tests

	* pf/bin/flip.pl, pf/bin/pfcmd_vlan, 
	pf/docs/MIB/Inverse-PacketFence-Notification.mib, 
	pf/lib/pf/SNMP/Aruba.pm, pf/lib/pf/SNMP/Cisco/Catalyst_2960.pm,
	pf/lib/pf/SNMP/PacketFence.pm, pf/lib/pf/SNMP.pm, pf/lib/pf/radius.pm,
	pf/sbin/pfsetvlan: flip.pl can now handle all Radius connection types
	- modified flip to deal with new connection types
	- added a -deauthenticateDot1x to pfcmd_vlan
	- our local SNMP Traps now carry the connection type (and pfsetvlan 
	  interprets it)
	- Aruba module no longer detects 802.1x on deauth since it's known 
	  when requested now
	- New mechanism to translate NAS-Port to ifIndexes and support for it
	  in the 2960 code
	- pfsetvlan supports new dot1x wireless de-association and issues a 
	  warning on wired dot1x then shut / no shut the port

	* pf/bin/pfcmd,  pf/lib/pf/SNMP/Aruba.pm, pf/lib/pf/SNMP/Cisco.pm,
	pf/lib/pf/SNMP/Dlink.pm, pf/sbin/pfsetvlan: Removed remaining 
	references to hardcoded 'WIFI' ifIndex.

2010-03-24	Olivier Bilodeau <obilodeau@inverse.ca>
	Minor refactorings all over the place based on review comments

	* pf/lib/pf/radius.pm: - Graceful recovery if switches.conf is broken
	- Created vlan_determine_for_node and calling the get_xxx_vlan from 
	  pf::vlan
	- Returning radius user is locked return code if vlan_determine_for_node
	  returns -1

	* pf/lib/pf/SNMP.pm: Added getVlanByName to resolve VLAN names from 
	switches.conf into VLAN numbers and do appropriate validation and error
	handling. Test case included.

	* pf/lib/pf/vlan.pm: Refactoring pf::vlan according to review
	- custom_getCorrectVlan renamed to get_normal_vlan
	- Pass node_info hashref instead of individual node information to 
	  get_normal_vlan()
	- Now using the new getVlanByName() call
	- Pushed up the testing of the switch object into 
	  determine_vlan_for_node and we are now degrading gracefully if object
	  is wrong